Fix bug with overlay z-index

--- a/Resources/public/backend/css/blueimp/jquery.fileupload-ui.css
+++ b/Resources/public/backend/css/blueimp/jquery.fileupload-ui.css
@@ -136,3 +136,7 @@
 	box-shadow:none;
 	outline:none;
 }
+
+.ui-front {
+  z-index: 1000 !important;
+}
